# abcy-data

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  abcy-data.postman_collection.json  config.example.toml  dragonride.json  openapi.json
.github/workflows/: docker.yml  test.yml
src/: api.rs  auth.rs  config.rs  fetch.rs  fit_parser.rs  lib.rs  main.rs  schema.rs  stats.rs  storage.rs  strava.rs  sync.rs  utils.rs  web.rs
tests/: activity_exists.rs  activity_stats.rs  activity_summary.rs  api_tests.rs  auth_refresh.rs  config_tests.rs  dragonride_summary.rs  fit_parser_tests.rs  ftp.rs  scores.rs  storage_tests.rs  strava_tests.rs  stream_parse.rs  sync_tests.rs  trend.rs  weight.rs  zstd_roundtrip.rs
