[package]
name = "abcy-data"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","stream"] }
fitparser = "0.7"
parquet = "50.0.0" # or whichever
polars = { version = "0.39", features = ["lazy","parquet"] }
tokio = { version = "1", features = ["macros","rt-multi-thread","fs","time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
anyhow = "1.0"

