[package]
name = "abcy-data"
version = "0.1.0"
edition = "2021"
default-run = "abcy-data"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
zstd = "0.12"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tokio = { version = "1", features = ["macros","rt-multi-thread","fs","time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
anyhow = "1.0"
async-trait = "0.1"
webbrowser = "0.8"
tiny_http = "0.12"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
actix-web = "4"
tempfile = "3"
mockito = "1"
actix-rt = "2"

